--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=5050
+PORT=:5050
 JWT_SECRET=tokenultrasecreto
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable
